<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alexbiehl.brixcalc.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp">

        <RadioGroup android:id="@+id/radio_group"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:checkedButton="@+id/brix_radio">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/brix_radio_name"
                android:id="@+id/brix_radio"
                style="@style/RadioStyle"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/sg_radio_name"
                android:id="@+id/sg_radio"
                style="@style/RadioStyle"/>

        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/table_title"
        style="@style/CalculatorTitleTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        android:text="@string/brix_to_sg_title" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TableRow android:gravity="left">

            <TextView
                android:id="@+id/calc_param_lbl"
                style="@style/OutputLabelStyle" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/param_num_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_weight="8"
                android:background="#d4cece"
                android:hint="@string/val_to_convert"
                android:inputType="numberDecimal"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_gravity="left"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/output_text_label"
                style="@style/OutputLabelStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left">

            <TextView
                android:id="@+id/output_val_field"
                style="@style/OutputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#d4cece" />
        </TableRow>

        <TableRow android:layout_gravity="left">

            <TextView
                style="@style/OutputTextStyle"
                android:text="@string/est_abv" />
        </TableRow>

        <TableRow android:layout_gravity="center">

            <TextView
                android:id="@+id/abv_output_field"
                style="@style/OutputTextStyle" />
        </TableRow>

        <TableRow
            android:layout_gravity="center"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#32cd32"
                android:onClick="onCalcClick"
                android:text="@string/update_str"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#FFFFFF" />
            <!--android:background="@color/colorPrimary"-->
        </TableRow>
    </TableLayout>

</LinearLayout>
